src/objects/ContinuousGrowth__c.object
<CustomObject>
    <fields>
        <fullName>Concern__c</fullName>
        <inlineHelpText>What aspect of our company do you worry about the most?</inlineHelpText>
        <label>Concern</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EnglishHours__c</fullName>
        <inlineHelpText>How many hours did you spent on practicing English this week?</inlineHelpText>
        <label>English Hours</label>
        <precision>5</precision>
        <required>true</required>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>English_Satisfaction__c</fullName>
        <inlineHelpText>How satisfied are you with the progress you achieved with your English? (5: Very Satisfied; 1: Very Unsatisfied)</inlineHelpText>
        <label>English Satisfaction</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Help__c</fullName>
        <inlineHelpText>What did you do this week to help another member of my local team?</inlineHelpText>
        <label>Help</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OverallSatisfaction__c</fullName>
        <inlineHelpText>What&apos;s your overall satisfaction/happiness for the week?</inlineHelpText>
        <label>Overall Satisfaction</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Share__c</fullName>
        <inlineHelpText>Did you learn anything new or awesome this week that you&apos;d like to try or share with the team?</inlineHelpText>
        <label>Share</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <inlineHelpText>This is the Monday of the week you record</inlineHelpText>
        <label>First Day of the Week</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Continuous Growth</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}{MM}-{0000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Continuous Growth</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>